--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
+    "openssl": "^1.1.0",
     "popper.js": "^1.15.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
@@ -29,7 +31,8 @@
     "webpack-cli": "^3.3.2"
   },
   "scripts": {
-    "live": "nodemon -w *.* --ignore public/dist/* --ignore webpack.config.js -w views/*.* start.js"
+    "live": "nodemon -w *.* --ignore public/dist/* --ignore webpack.config.js -w views/*.* start.js",
+    "start": "node app.js"
   },
   "author": "FatihAziz",
   "license": "ISC",
